--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,20 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/pit"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication33"
         tools:targetApi="31">
+        <activity
+            android:name=".washAndIronItems"
+            android:exported="false" />
+        <activity
+            android:name=".washAndFoldItems"
+            android:exported="false" />
+        <activity
+            android:name=".ironActivityItems"
+            android:exported="false" />
         <activity
             android:name=".order_confirmation"
             android:exported="false" />
