--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.MyApplication33"
         tools:targetApi="31">
         <activity
+            android:name=".UserOrdersActivity"
+            android:exported="false" />
+        <activity
             android:name=".washAndIronItems"
             android:exported="false" />
         <activity
